[package]
name = "rolling-stats"
version = "0.3.0"
description = "Rolling statistics calculations (min/max/mean/std_dev) over arbitrary floating point numbers based on Welford's Online Algorithm" 
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
repository = "https://github.com/ryankurte/rust-rolling-stats"
edition = "2018"
license = "MIT / Apache-2.0"

[dependencies]
num = "0.2.0"
num-traits = "0.2.6"
serde = { version = "1.0.94", features = ["derive"] }

[dev-dependencies]
float-cmp = "0.4.0"
